--- a/src/Polcode/SSRBundle/Resources/config/routing/krakow.yml
+++ b/src/Polcode/SSRBundle/Resources/config/routing/krakow.yml
@@ -1,3 +1,8 @@
 ssr_krakow_homepage:
     path:     /
     defaults: { _controller: SSRBundle:Cities/Krakow:index }
+
+ssr_krakow_download:
+    path:     /download
+    defaults: { _controller: SSRBundle:Cities/Krakow:download }
+    
